2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserContext.cpp:
	* X3DFlyViewer.cpp:
	* Billboard.cpp:
	* OrientationInterpolator.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Numbers.h:
	* Matrix.h:
	* ViewVolume.h:
	* ViewVolume.cpp:
	* LightContainer.h:
	* X3DBrowserContext.cpp:
	* Viewport.h:
	* X3DFlyViewer.cpp:
	* ExamineViewer.cpp:
	* Viewport.cpp:
	* X3DLayerNode.h:
	* Billboard.cpp:
	* Viewpoint.cpp:
	* OrthoViewpoint.cpp:
	* RenderingProperties.cpp:
	* SphereSensor.cpp:
	* CylinderSensor.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ProximitySensor.h:
	* ProximitySensor.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Router.cpp:
	* jsContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.h:
	* ViewVolume.cpp:
	* X3DBrowserContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-01  Holger Seelig  <holger.seelig@yahoo.de>

	* SFNode.h:
	* Parser.h:
	* MFNode.h:
	* X3DField.h:
	* Proto.h:
	* MFNode.cpp:
	* Parser.cpp:
	* X3DBaseNode.cpp:
	* X3DBrowser.cpp:
	* X3DScene.cpp:
	* X3DChildObject.cpp:
	* X3DFieldDefinition.h:
	* GarbargeCollector.cpp:
	* ImportedNode.cpp:
	* X3DFieldDefinition.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* X3DLayerNode.cpp:
	* X3DPrototypeInstance.cpp:
	* jsSFNode.cpp:
	* jsX3DProtoDeclaration.cpp:
	* jsX3DExecutionContext.cpp:
	* X3DBackgroundNode.cpp:
	* jsX3DExternProtoDeclaration.cpp: 

2013-06-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* X3DBrowser.cpp: