@@ -132,7 +132,7 @@ private:
 
 	virtual
 	void
-	initialize ();
+	initialize () final;
 
 	struct Fields
 	{
